styles.css
/* ... */
.footer__logo--img {
  height: 32px;
  width: 32px;
}

.footer__logo--name {
  color: #f7fafc;
  font-size: 20px;
  font-weight: 900;
  letter-spacing: 0.05;
  margin-left: 8px;
}

.footer__copyright {
  color: #cbd5e0;
  font-weight: 500;
}

.footer__socials {
  display: flex;
  align-items: center;
  margin-left: 16px;
}

.footer__social--link {
  display: flex;
  justify-content: center;
  background: #f7fafc;
  border-radius: 50%;
  padding: 8px;
  margin-left: 16px;
  z-index: 2;
  cursor: pointer;
  transition: all 300ms ease;
}

.footer__social--link svg {
  height: 16px;
  width: 16px;
}

/*Adding Responsiveness*/

@media (max-width: 1024px) {
  h1 {
    font-size: 30px;
  }

  .container {
    width: 100%;
    max-width: 1024px;
    display: flex;
    margin: 0 auto;
    padding: 32px 16px;
  }

  .row {
    width: 100%;
    max-width: 1024px;
    margin: 0 auto;
  }

  .nav__row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  .service__row {
    padding: 32px 8px;
    margin: 0 16px;
  }

  #features .row {
    width: 100%;
  }

  .nav__links {
    display: none;
  }

  .btn__menu {
    display: block;
  }

  header h1 {
    margin-top: 80px;
  }

  .section__title {
    font-size: 36px;
  }

  .section__para {
    font-size: 16px;
  }

  .header__description {
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .header__description,
  .header__img--wrapper {
    width: 100%;
    max-width: 512px;
    margin: 0 auto;
  }

  header .row,
  .header__email,
  footer .row {
    flex-direction: column;
  }

  .header__customers--title {
    margin-top: 40px;
  }

  .header__customers--img {
    margin-top: 16px;
    margin-bottom: 64px;
    padding-right: 0px;
  }

  .header__img {
    margin-bottom: 64px;
  }

  .services {
    max-width: 768px;
  }

  .service {
    width: calc(100% / 2);
  }

  .list__plans {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .plan {
    max-width: 35%;
    margin: auto 0;
    margin-right: 0px;
  }

  footer {
    padding: 80px 32px;
  }
}
/* ... */

